kube/dev/manifests/ai/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai
  namespace: ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai
  template:
    metadata:
      labels:
        app: ai
    spec:
      containers:
        - name: ai
          image: 474668404452.dkr.ecr.ap-northeast-2.amazonaws.com/ai-server:latest
          ports:
            - containerPort: 80
      tolerations:
      - key: "node-role"
        operator: "Equal"
        value: "ai"
        effect: "NoSchedule"
