kube/dev/manifests/ai/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ai-service
  namespace: ai
spec:
  selector:
    app: ai
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
